--- a/src/ReferenceLine/VerticalReferenceLine.css
+++ b/src/ReferenceLine/VerticalReferenceLine.css
@@ -5,4 +5,5 @@
 .vertical-reference-line-group line {
     stroke: var(--vertical-reference-line-color);
     stroke-width: var(--vertical-reference-line-width);
+    stroke-dasharray: 1 1;
 }
