--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -23,11 +23,20 @@
     --crosshair-reference-line-stroke-dasharray: 1 1;
 
     /*
-     * variables that control the style of user provided reference line
+     * variables that control the style of user provided vertical reference line
      */
-     --vertical-reference-line-color: rgba(0,0,255,.8);
-     --vertical-reference-line-width: 1px;
-     --vertical-reference-line-stroke-dasharray: 2 1;
+    --vertical-reference-line-color: rgba(50, 50, 50, .5);
+    --vertical-reference-line-width: 1px;
+    --vertical-reference-line-stroke-dasharray: 2 1;
+
+    /*
+     * variables that control the style of user provided horizontal reference line
+     */
+    --horizontal-reference-line-color: rgba(50, 50, 50, .5);
+    --horizontal-reference-line-width: 1px;
+    --horizontal-reference-line-stroke-dasharray: none;
+    --horizontal-reference-line-label-text-color: rgba(30, 30, 30, .9);
+    --horizontal-reference-line-label-text-size: .8rem;
 
     /*
      * variables that control the style of divider line that is used in Diverging Bar Chart and similar
