--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -27,7 +27,7 @@
      */
     --vertical-reference-line-color: rgba(50, 50, 50, .5);
     --vertical-reference-line-width: 1px;
-    --vertical-reference-line-stroke-dasharray: 2 1;
+    --vertical-reference-line-stroke-dasharray: none;
 
     /*
      * variables that control the style of user provided horizontal reference line
