feat(DivergingBar): allow user to show label text on top

--- a/src/BarChart/BarLabelOnTop.css
+++ b/src/BarChart/BarLabelOnTop.css
@@ -1,4 +1,5 @@
 .bar-label-on-top-group text{
     fill: var(--axis-tick-text-color);
     font-size: var(--axis-tick-text-font-size);
+    transform: translateY(var(--bar-label-on-top-translate-y-position))
 }
