fix: BarChart should be able to show both label text and sticky label text

--- a/src/BarChart/BarLabelText.css
+++ b/src/BarChart/BarLabelText.css
@@ -1,5 +1,10 @@
-.bar-label-on-top-group text{
+.sticky-bar-label-text-group text{
     fill: var(--axis-tick-text-color);
     font-size: var(--axis-tick-text-font-size);
     transform: translateY(var(--bar-label-on-top-translate-y-position))
+}
+
+.bar-label-text-group text{
+    fill: var(--axis-tick-text-color);
+    font-size: var(--axis-tick-text-font-size);
 }
