--- a/src/GroupedBarChart/GroupedBarLabelText.css
+++ b/src/GroupedBarChart/GroupedBarLabelText.css
@@ -1,4 +1,4 @@
-.bar-label-text-group text{
+.grouped-bar-label-text-group text{
     fill: var(--axis-tick-text-color);
     font-size: var(--axis-tick-text-font-size);
     transform: translateY(var(--bar-label-text-translate-y-position))
