fix: add css variables to control style of bar label text

--- a/src/styles/axis.css
+++ b/src/styles/axis.css
@@ -1,5 +1,6 @@
 .axis .tick text {
     fill: var(--axis-tick-text-color);
+    font-size: var(--axis-tick-text-font-size);
 }
 
 .axis .tick line {
