--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -7,10 +7,15 @@
     --axis-tick-text-font-size: 10px;
 
     /*
+     * variables that control the style of the bar label text
+     */
+    --bar-label-text-color: #303030;
+    --bar-label-text-font-size: 10px;
+    /*
      * this variable will be used to adjust the position of 
      * bar-label-text-group text element along the y axis.
      */
-    --bar-label-text-translate-y-position: -8px;
+     --bar-label-text-translate-y-position: -8px;
 
     /*
      * variables that control the style of the chart tooltip
