--- a/src/GroupedBarChart/GroupedBarLabelText.css
+++ b/src/GroupedBarChart/GroupedBarLabelText.css
@@ -1,5 +1,5 @@
 .grouped-bar-label-text-group text{
-    fill: var(--axis-tick-text-color);
-    font-size: var(--axis-tick-text-font-size);
+    fill: var(--bar-label-text-color);
+    font-size: var(--bar-label-text-font-size);
     transform: translateY(var(--bar-label-text-translate-y-position))
 }
